# betterwheel.github.io

./: .coderabbit.yaml  .gitignore  CLAUDE.md  Cargo.toml  README.md  config.toml  config.toml.example  index.html  package-lock.json  package.json  style.css
.github/workflows/: ci.yml  release.yml  test.yml
docs/legacy-webapi/: README.md  SETUP.md  spike.rs
docs/legacy-webapi/ibkr/: client.rs
migrations/: 0001_init.sql  0002_pending_rolls.sql  0003_zerodte_positions.sql  0004_zerodte_settings.sql  0005_indexes_and_guards.sql
scripts/: build-windows.sh  installer.nsi  microsoft-roots.pem  release.sh  sign-windows.sh
src/: config.rs  data.rs  lib.rs  main.rs  positions.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/engine/: covered_call.rs  csp.rs  manage.rs  math.rs  mod.rs  types.rs
src/engine/structures/: broken_wing.rs  credit_spread.rs  iron_condor.rs  iron_fly.rs  mod.rs  strangle.rs
src/ibkr/: auth.rs  mod.rs  models.rs
src/store/: mod.rs  models.rs  repo.rs
src/tui/: app.rs  demo.rs  live.rs  mod.rs  schedule.rs  ui.rs
