[package]
name = "betterwheel-desktop"
version = "0.1.0"
description = "BetterWheel — desktop dashboard for the IBKR wheel strategy"
edition = "2021"
license = "AGPL-3.0-or-later"

[lib]
name = "betterwheel_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# The shared core: engine, data pipeline, store, broker layer.
betterwheel = { path = ".." }

tauri = { version = "2", features = [] }
# default-features off: the default rustls-tls pulls in `ring`, whose C build
# script breaks under cargo-xwin. native-tls uses the OS TLS stack instead
# (schannel on Windows, Security.framework on macOS) — nothing to cross-compile.
tauri-plugin-updater = { version = "2", default-features = false, features = ["native-tls", "zip"] }
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
